Fix wrong background tag pre from version dark

--- a/assets/scss/root.scss
+++ b/assets/scss/root.scss
@@ -443,6 +443,7 @@
         pre {
             color: var(--always-white) !important;
             border-color: var(--comment-background) !important;
+            background: var(--nav-bar-background) !important;
         }
     }
 }
